this worked but did not use nested descriminators
